Проектная работа 3 - исправления

--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -4,12 +4,6 @@
 
 @media screen and (min-width: 1024px) {
     .lead__image {
-        width: calc(100vw - (2*48px));
-    }
-}
-
-@media screen and (min-width: 1280px) {
-    .lead__image {
-        width: calc(100vw - (2*148px));
+        width: 100%;
     }
 }
