--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,5 +1,5 @@
 .header__lang-link {
-    font-family: 'Inter';
+    font-family: 'Inter', Arial, Helvetica, sans-serif;
     font-style:  normal;
     font-weight: 400;
     font-size: 18px;
@@ -7,6 +7,12 @@
     line-height: 1.25;
     text-align: right;
     color: #fff;
+    transition: opacity 1s ease;
+}
+
+.header__lang-link:hover {
+    opacity: .8;
+    cursor: pointer;
 }
 
 @media screen and (min-width: 768px) {
@@ -15,4 +21,3 @@
         line-height: 1.75;
     }
 }
-
