--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -1,5 +1,5 @@
 .intro__text {
-    font-family: 'Inter';
+    font-family: 'Inter', Arial, Helvetica, sans-serif;
     font-size: 16px;
     line-height: 1.63;
     font-style: normal;
