--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -1,7 +1,7 @@
 .lead__caption {
     
     align-self: flex-start;
-    font-family: 'Inter';
+    font-family: 'Inter', Arial, Helvetica, sans-serif;
     font-style:  normal;
     font-weight: 400;
     font-size: 10px;
