--- a/blocks/page/__cover/page__cover.css
+++ b/blocks/page/__cover/page__cover.css
@@ -1,3 +1,15 @@
 .page__cover {
-  margin: 0 auto 64px;
+    margin: 0 auto 64px;
+}
+  
+  @media screen and (min-width: 768px) {
+      .page__cover {
+        margin-bottom: 88px;
+       }
+}
+  
+  @media screen and (min-width: 1024px) {
+      .page__cover {
+        margin-bottom: 92px;
+       }
 }
