--- a/blocks/place/__text/place__text.css
+++ b/blocks/place/__text/place__text.css
@@ -1,7 +1,7 @@
 .place__text {
     width: calc(100% - (2*16px));
     display: grid;
-    grid-template-rows: repeat(2, minmax(min-content, max-content));
+    grid-template-rows: minmax(min-content, max-content);
     row-gap: 25px;
 }
 
