--- a/blocks/place/__website-title/place__website-title.css
+++ b/blocks/place/__website-title/place__website-title.css
@@ -1,9 +1,10 @@
-.place__webcite-title {
+.place__website-title {
   color: #AAA;
   font-style:  normal;
   font-weight: 400;
   font-size: 12px;
   line-height: 1;
   letter-spacing: .2em;
+  text-transform: uppercase;
   margin: 0;
 }
