--- a/page/index.css
+++ b/page/index.css
@@ -1,5 +1,6 @@
 @import url("../vendor/normalize.css");
 @import url("../font/font.css");
+@import url("../blocks/body/body.css");
 @import url("../blocks/page/page.css");
 @import url("../blocks/page/__header/page__header.css");
 @import url("../blocks/page/__lead/page__lead.css");
